[workspace]
members = ["qemu", "kernel"]
resolver = "2"

[patch.crates-io]
bootloader = { git = "https://github.com/rust-osdev/bootloader", rev = "f95e9a9", package = "bootloader", version = "=0.11.0-alpha.0" }
bootloader_api = { git = "https://github.com/rust-osdev/bootloader", rev = "f95e9a9", package = "bootloader_api", version = "=0.1.0-alpha.0" }
