[workspace]
members = ["qemu", "kernel"]
resolver = "2"

[patch.crates-io]
bootloader = { git = "https://github.com/rust-osdev/bootloader", rev = "f95e9a9", package = "bootloader", version = "=0.11.0-alpha.0" }
bootloader_api = { git = "https://github.com/rust-osdev/bootloader", rev = "f95e9a9", package = "bootloader_api", version = "=0.1.0-alpha.0" }

[profile.release]
opt-level = 3
strip = true
codegen-units = 1
# FIXME: uncomment this line when there is an answer to https://github.com/rust-osdev/bootloader/pull/232#issuecomment-1244696577
# lto = true
