cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-none"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "0.1.0-alpha.0"
uart_16550 = "0.2.10"
log = "0.4"
profont = "0.6"
embedded-graphics = "0.7"
spin = "0.9"
