cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-none"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = { git = "https://github.com/rust-osdev/bootloader", branch = "next" }
x86_64 = "0.14"
uart_16550 = "0.2.10"
log = "0.4"
profont = "0.6"
embedded-graphics = "0.7"
spin = "0.9"
cfg-if = "1.0"
no-panic = "0.1"
