[package]
name = "qemu"
version = "0.1.0"
edition = "2021"
default-run = "qemu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
kernel = { path = "../kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = { git = "https://github.com/rust-osdev/bootloader", branch = "next" }
